--- a/.github/workflows/build-img.yml
+++ b/.github/workflows/build-img.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v5
         with:
-          context: .
+          context: back
           push: true
           tags: ghcr.io/eli-sauvage/lhavrais-pay:latest
           cache-from: type=gha
