--- a/.github/workflows/build-back.yml
+++ b/.github/workflows/build-back.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: build docker image
+name: build docker image backend
 
 on:
   push:
