--- a/compose.yml
+++ b/compose.yml
@@ -27,6 +27,15 @@ services:
         condition: service_healthy
     networks:
       - lhavrais-pay
+  front:
+    build:
+      context: front
+    image: ${DOCKER_IMAGE_URL_BASE}lhavrais-pay-front:latest
+    ports:
+      - 80:80
+      - 443:443
+    networks:
+      - lhavrais-pay
 
 volumes:
   sql-data:
