--- a/compose.yml
+++ b/compose.yml
@@ -35,7 +35,7 @@ services:
       - 8080:8080
       - 4433:4433
     volumes:
-      - ${PWD}/certs/certs:/etc/letsencrypt/live/lhavrais-pay.eli-sauvage.eu
+      - ${PWD}/front/certs/letsencrypt:/etc/letsencrypt/
     networks:
       - lhavrais-pay
 
