--- a/front/nginx.conf
+++ b/front/nginx.conf
@@ -2,6 +2,7 @@ events {
     worker_connections 1024;
 }
 http{
+    include mime.types;
     server {
         listen 8080;
         server_name lhavrais-pay.eli-sauvage.eu;
