better env + api url not hardcoded

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,10 @@
 MARIADB_PASSWORD=
-MARIADB_HOST=
 
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
+
+VITE_SITE_URL=
+VITE_API_URL=
 
 #dev vars
 DOCKER_IMAGE_URL_BASE=ghcr.io/eli-sauvage/
