--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,6 +2,12 @@ FROM node:20-bookworm as builder
 
 WORKDIR /app
 
+ARG VITE_SITE_URL
+ENV VITE_SITE_URL ${VITE_SITE_URL}
+
+ARG VITE_API_URL
+ENV VITE_API_URL ${VITE_API_URL}
+
 COPY front/package*.json .
 
 RUN npm i 
