--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ events {
 http{
     include mime.types;
     server {
+        resolver 127.0.0.11;
         listen 8080;
         server_name lhavrais-pay.eli-sauvage.eu;
 
@@ -13,7 +14,7 @@ http{
         }
 
         location /api {
-            set $target http://localhost:3000;
+            set $target http://server:8000;
             proxy_pass $target;
         }
     }
