--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -20,4 +20,4 @@ FROM nginx:1-alpine
 
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY ./nginx.conf /etc/nginx/nginx.conf
