--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20-bookworm as builder
+FROM node:20-bookworm AS builder
 
 WORKDIR /app
 
@@ -7,10 +7,10 @@ COPY front/package*.json .
 RUN npm i 
 
 ARG VITE_SITE_URL
-ENV VITE_SITE_URL ${VITE_SITE_URL}
+ENV VITE_SITE_URL=${VITE_SITE_URL}
 
 ARG VITE_API_URL
-ENV VITE_API_URL ${VITE_API_URL}
+ENV VITE_API_URL=${VITE_API_URL}
 
 COPY front/ .
 
@@ -20,4 +20,4 @@ FROM nginx:1-alpine
 
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY nginx.conf /etc/nginx/nginx.conf
