--- a/.github/workflows/build-front.yml
+++ b/.github/workflows/build-front.yml
@@ -27,6 +27,9 @@ jobs:
           username: eli-sauvage
           password: ${{ secrets.GITHUB_TOKEN }}
       
+      - name: copy env template to .env
+        run: cp .env.template .env 
+
       - name: load dotenv file
         uses: xom9ikk/dotenv@v2.3.0
 
