forgot to set url in template

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,13 @@
+# this template can be copied to the root of the project `cp .env.template .env`
+#it is also used for the CI -> the urls are translated in the front end bundle
+
 MARIADB_PASSWORD=
 
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 
-VITE_SITE_URL=
-VITE_API_URL=
+VITE_SITE_URL=https://lhavrais-pay.eli-sauvage.eu
+VITE_API_URL=https://lhavrais-pay.eli-sauvage.eu/api
 
 #dev vars
 DOCKER_IMAGE_URL_BASE=ghcr.io/eli-sauvage/
