--- a/nginx.conf
+++ b/nginx.conf
@@ -3,6 +3,8 @@ events {
 }
 http{
     include mime.types;
+    default_type application/octet-stream;
+    sendfile on;
     server {
         resolver 127.0.0.11;
         listen 8080;
@@ -11,7 +13,10 @@ http{
         location / {
             root /usr/share/nginx/html;
             index index.html;
+            try_files $uri $uri/ /index.html;
         }
+
+        error_page   500 502 503 504  /usr/share/nginx/html/50x.html;
 
         location /api {
             set $target http://server:8000;
