--- a/front/package.json
+++ b/front/package.json
@@ -14,12 +14,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.4",
+    "primevue": "^4.0.4",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@stripe/stripe-js": "^4.2.0",
     "@rushstack/eslint-patch": "^1.8.0",
+    "@stripe/stripe-js": "^4.2.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
