--- a/back/Cargo.toml
+++ b/back/Cargo.toml
@@ -20,3 +20,6 @@ async-stripe-core = { git = "https://github.com/arlyon/async-stripe", branch = "
 ] }
 async-stripe-types = { git = "https://github.com/arlyon/async-stripe", branch = "next" }
 async-stripe-webhook = { git = "https://github.com/arlyon/async-stripe", branch = "next", features = ["async-stripe-checkout"]}
+lettre = { version = "0.11.7", features = ["tokio1-rustls-tls", "builder", "smtp-transport"], default-features = false}
+rand = "0.8.5"
+uuid = { version = "1.10.0", features = ["v4"] }
