--- a/.env.template
+++ b/.env.template
@@ -9,6 +9,9 @@ STRIPE_SECRET_KEY=
 VITE_SITE_URL=https://lhavrais-pay.eli-sauvage.eu
 VITE_API_URL=https://lhavrais-pay.eli-sauvage.eu/api
 
+SMTP_USERNAME=
+SMTP_PASSWORD=
+
 #dev vars
 DOCKER_IMAGE_URL_BASE=ghcr.io/eli-sauvage/
 DATABASE_URL=mysql://app:${MARIADB_PASSWORD}@localhost:3306/lhavrais-pay
