--- a/back/Cargo.toml
+++ b/back/Cargo.toml
@@ -22,4 +22,5 @@ axum = { version = "0.7.5", features = ["query"] }
 tower-http = { version = "0.5.2", features = ["cors"] }
 serde_json = "1.0"
 axum-extra = { version = "0.9.3", features = ["cookie"] }
-qrcode = { version = "0.14.1", features = ["svg"], default-features = false }
+qrcode = { version = "0.14.1", features = ["svg", "image"], default-features = false }
+image = { version = "0.25.2", default-features = false, features = ["png", "rayon"] }
