only on docker image, front is served by axum  now

--- a/back/Cargo.toml
+++ b/back/Cargo.toml
@@ -19,7 +19,7 @@ rand = "0.8.5"
 uuid = { version = "1.10.0", features = ["v4"] }
 reqwest = { version = "0.12", features = ["json"] }
 axum = { version = "0.7.5", features = ["query"] }
-tower-http = { version = "0.5.2", features = ["cors"] }
+tower-http = { version = "0.5.2", features = ["cors", "fs"] }
 serde_json = "1.0"
 axum-extra = { version = "0.9.3", features = ["cookie"] }
 qrcode = { version = "0.14.1", features = ["svg", "image"], default-features = false }
