--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@primevue/themes": "^4.0.4",
+    "html2pdf.js": "^0.10.2",
     "primevue": "^4.0.4",
     "qr-scanner": "^1.4.2",
     "vue": "^3.4.29",
