[front] changed app name and referenced bar name in title

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,8 @@
 # this template can be copied to the root of the project `cp .env.template .env`
 #it is also used for the CI -> the urls are translated in the front end bundle
 
+VITE_BAR_NAME="l'havrais bière"
+
 MARIADB_PASSWORD=
 
 STRIPE_PUBLISHABLE_KEY=
