--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lhavrais-pay-front",
+  "name": "biere-n-collect-front",
   "version": "0.0.0",
   "private": true,
   "type": "module",
