[skip ci] renamed app

--- a/.env.template
+++ b/.env.template
@@ -8,12 +8,12 @@ MARIADB_PASSWORD=
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 
-VITE_SITE_URL=https://lhavrais-pay.eli-sauvage.eu
-VITE_API_URL=https://lhavrais-pay.eli-sauvage.eu/api
+VITE_SITE_URL=https://biere-n-collect.eli-sauvage.eu
+VITE_API_URL=https://biere-n-collect.eli-sauvage.eu/api
 
 SMTP_USERNAME=
 SMTP_PASSWORD=
 
 #dev vars
 DOCKER_IMAGE_URL_BASE=ghcr.io/eli-sauvage/
-DATABASE_URL=mysql://app:${MARIADB_PASSWORD}@localhost:3306/lhavrais-pay
+DATABASE_URL=mysql://app:${MARIADB_PASSWORD}@localhost:3306/biere-n-collect
