added footer + fixed css

--- a/.env.template
+++ b/.env.template
@@ -17,3 +17,4 @@ SMTP_PASSWORD=
 #dev vars
 DOCKER_IMAGE_URL_BASE=ghcr.io/eli-sauvage/
 DATABASE_URL=mysql://app:${MARIADB_PASSWORD}@localhost:3306/biere-n-collect
+# MARIADB_HOST=localhost # override db host for local execution
