--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,43 +7,81 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  setup_environment:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
-
     steps:
-      - name: Check out code
-        uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - name: create file
+        run: echo "bonjour" > /test/file
+    print_file:
+      runs-on: ubuntu-latest
+      steps:
+        - name: print file
+          run: cat /test/file
 
-      - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
-        with:
-          registry: ghcr.io
-          username: eli-sauvage
-          password: ${{ secrets.GITHUB_TOKEN }}
+  # test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     -
 
-      - name: copy env template
-        run: cp .env.template .env
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Check out code
+  #       uses: actions/checkout@v3
 
-      - name: load dotenv file
-        uses: xom9ikk/dotenv@v2.3.0
+  #     - name: copy env template
+  #       run: cp .env.template .env
 
-      - name: test back
-        run: |
-          bash test.sh
-          docker compose build
-          docker compose push
+  #     - name: load dotenv file
+  #       uses: xom9ikk/dotenv@v2.3.0
 
-      # - name: Build and push
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     push: true
-      #     tags: ghcr.io/eli-sauvage/biere-n-collect:latest
-      #     cache-from: type=gha
-      #     build-args: |
-      #       VITE_BAR_NAME=${{ env.VITE_BAR_NAME }}
-      #     cache-to: type=gha,mode=max
+  #     - name: build
+  #       run: |
+  #         docker compose build
+
+  # push:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   permissions:
+  #     contents: write
+  #     packages: write
+
+  #   steps:
+  #     - name: Check out code
+  #       uses: actions/checkout@v3
+
+  #     - name: Log in to the Container registry
+  #       uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+  #       with:
+  #         registry: ghcr.io
+  #         username: eli-sauvage
+  #         password: ${{ secrets.GITHUB_TOKEN }}
+
+  #     - name: push
+  #       run: |
+  #         docker compose push
+
+  #     # - name: copy env template
+  #     #   run: cp .env.template .env
+
+  #     # - name: load dotenv file
+  #     #   uses: xom9ikk/dotenv@v2.3.0
+
+  #     # - name: test back
+  #     #   run: |
+  #     #     bash test.sh
+  #     #     docker buildx build --push \
+  #     #       -t ghrc.io/eli-sauvage/biere-n-collect:lastest \
+  #     #       --cache-to type=gha,url
+  #     #       .
+  #     #     docker compose push
+
+  #     # - name: Build and push
+  #     #   uses: docker/build-push-action@v5
+  #     #   with:
+  #     #     push: true
+  #     #     tags: ghcr.io/eli-sauvage/biere-n-collect:latest
+  #     #     cache-from: type=gha
+  #     #     build-args: |
+  #     #       VITE_BAR_NAME=${{ env.VITE_BAR_NAME }}
+  #     #     cache-to: type=gha,mode=max
