--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,13 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: create file
-        run: echo "bonjour" > /test/file
+        run: echo "bonjour" > /file
   print_file:
     runs-on: ubuntu-latest
     needs: setup_environment
     steps:
       - name: print file
-        run: cat /test/file
+        run: cat /file
 
   # test:
   #   runs-on: ubuntu-latest
