--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,82 +7,97 @@ on:
   workflow_dispatch:
 
 jobs:
-  setup_environment:
+  test:
     runs-on: ubuntu-latest
     steps:
-      - name: create file
-        run: echo "bonjour" > ./file
-  print_file:
+      - name: Check out code
+        uses: actions/checkout@v3
+
+      - name: copy env template
+        run: cp .env.template .env
+
+      - name: load dotenv file
+        uses: xom9ikk/dotenv@v2.3.0
+
+      - name: build
+        run: |
+          bash test.sh
+
+  build:
     runs-on: ubuntu-latest
-    needs: setup_environment
     steps:
-      - name: print file
-        run: cat ./file
+      - name: Check out code
+        uses: actions/checkout@v3
 
-  # test:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     -
+      - name: copy env template
+        run: cp .env.template .env
 
-  # build:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Check out code
-  #       uses: actions/checkout@v3
+      - name: load dotenv file
+        uses: xom9ikk/dotenv@v2.3.0
 
-  #     - name: copy env template
-  #       run: cp .env.template .env
+      - name: build
+        run: |
+          docker compose build
 
-  #     - name: load dotenv file
-  #       uses: xom9ikk/dotenv@v2.3.0
+      - name: Save Docker image as an artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: release-image
+          path: ./release-image.tar
 
-  #     - name: build
-  #       run: |
-  #         docker compose build
+      - name: Save Docker image for later use
+        run: |
+          docker save rust-project:release -o ./release-image.tar
 
-  # push:
-  #   runs-on: ubuntu-latest
-  #   needs: build
-  #   permissions:
-  #     contents: write
-  #     packages: write
+  push:
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+      packages: write
 
-  #   steps:
-  #     - name: Check out code
-  #       uses: actions/checkout@v3
+    steps:
+      - name: Download the saved Docker image
+        uses: actions/download-artifact@v3
+        with:
+          name: release-image
+          path: ./release-image.tar
 
-  #     - name: Log in to the Container registry
-  #       uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
-  #       with:
-  #         registry: ghcr.io
-  #         username: eli-sauvage
-  #         password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check out code
+        uses: actions/checkout@v3
 
-  #     - name: push
-  #       run: |
-  #         docker compose push
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ghcr.io
+          username: eli-sauvage
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-  #     # - name: copy env template
-  #     #   run: cp .env.template .env
+      - name: push
+        run: |
+          docker compose push
 
-  #     # - name: load dotenv file
-  #     #   uses: xom9ikk/dotenv@v2.3.0
+      # - name: copy env template
+      #   run: cp .env.template .env
 
-  #     # - name: test back
-  #     #   run: |
-  #     #     bash test.sh
-  #     #     docker buildx build --push \
-  #     #       -t ghrc.io/eli-sauvage/biere-n-collect:lastest \
-  #     #       --cache-to type=gha,url
-  #     #       .
-  #     #     docker compose push
+      # - name: load dotenv file
+      #   uses: xom9ikk/dotenv@v2.3.0
 
-  #     # - name: Build and push
-  #     #   uses: docker/build-push-action@v5
-  #     #   with:
-  #     #     push: true
-  #     #     tags: ghcr.io/eli-sauvage/biere-n-collect:latest
-  #     #     cache-from: type=gha
-  #     #     build-args: |
-  #     #       VITE_BAR_NAME=${{ env.VITE_BAR_NAME }}
-  #     #     cache-to: type=gha,mode=max
+      # - name: test back
+      #   run: |
+      #     bash test.sh
+      #     docker buildx build --push \
+      #       -t ghrc.io/eli-sauvage/biere-n-collect:lastest \
+      #       --cache-to type=gha,url
+      #       .
+      #     docker compose push
+
+      # - name: Build and push
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     push: true
+      #     tags: ghcr.io/eli-sauvage/biere-n-collect:latest
+      #     cache-from: type=gha
+      #     build-args: |
+      #       VITE_BAR_NAME=${{ env.VITE_BAR_NAME }}
+      #     cache-to: type=gha,mode=max
