--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
 
   push:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [build, test]
     permissions:
       contents: write
       packages: write
