--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,12 @@ jobs:
       packages: write
 
     steps:
+      - name: copy env template
+        run: cp .env.template .env
+
+      - name: load dotenv file
+        uses: xom9ikk/dotenv@v2.3.0
+
       - name: Download the saved Docker image
         uses: actions/download-artifact@v3
         with:
