--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,8 +72,9 @@ jobs:
           name: release-image
           path: ./release-image.tar
 
-      - name: Check out code
-        uses: actions/checkout@v3
+      - name: Load Docker image
+        run: |
+          docker load -i ./release-image.tar
 
       - name: Log in to the Container registry
         uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
