switch to sqlite ?

--- a/.env.template
+++ b/.env.template
@@ -3,8 +3,6 @@
 
 VITE_BAR_NAME="l'havrais bière"
 
-MARIADB_PASSWORD=
-
 STRIPE_PUBLISHABLE_KEY=
 STRIPE_SECRET_KEY=
 
@@ -16,5 +14,5 @@ SMTP_PASSWORD=
 
 #dev vars
 DOCKER_IMAGE_URL_BASE=ghcr.io/eli-sauvage/
-DATABASE_URL=mysql://app:${MARIADB_PASSWORD}@localhost:3306/biere-n-collect
-# MARIADB_HOST=localhost # override db host for local execution
+DATABASE_FILE=biere-n-collect.db
+DATABASE_URL=sqlite:$DATABASE_FILE
