--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -1,16 +1,16 @@
 FROM rust:1-bookworm
 
-ENV SQLX_OFFLINE true
+ARG DATABASE_URL
+ENV DATABASE_URL=$DATABASE_URL
+ARG DATABASE_FILE
 
 WORKDIR /app/biere-n-collect/
 
 COPY back/Cargo.toml Cargo.toml
 COPY back/src/ src/
 
-#/!\ please make sure to run `cargo sqlx prepare -- --tests` before
-COPY back/.sqlx .sqlx
 COPY back/migrations migrations
-
+COPY back/$DATABASE_FILE $DATABASE_FILE
 
 RUN cargo build --tests
 
