--- a/back/Cargo.toml
+++ b/back/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 
 [dependencies]
-sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "time"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "time"] }
 tokio = { version = "1.39", features = ["rt-multi-thread", "sync", "signal"] }
 dotenvy = "0.15.7"
 serde = { version = "1.0", features = ["derive"] }
