--- a/compose.test.yml
+++ b/compose.test.yml
@@ -1,22 +1,10 @@
 services:
-  db-test:
-    image: mariadb:10.6.16
-    environment:
-      MARIADB_ROOT_PASSWORD: test-root-password
-      MARIADB_DATABASE: biere-n-collect
-    healthcheck:
-      test: ["CMD", "/usr/local/bin/healthcheck.sh", "--connect"]
-      retries: 10
-      interval: 5s
-    ports:
-      - 1234:3306
-
   test-back:
     build:
       context: .
       dockerfile: Dockerfile.test
+      args:
+        - DATABASE_FILE=biere-n-collect.db
+        - DATABASE_URL=sqlite:biere-n-collect.db
     environment:
-      DATABASE_URL: "mysql://root:test-root-password@db-test:3306/biere-n-collect"
-    depends_on:
-      db-test:
-        condition: service_healthy
+      - DATABASE_URL=sqlite:biere-n-collect.db
