--- a/compose.yml
+++ b/compose.yml
@@ -1,39 +1,19 @@
 services:
-  db:
-    image: mariadb:10.6.16
-    environment:
-      MARIADB_USER: app
-      MARIADB_PASSWORD: ${MARIADB_PASSWORD}
-      MARIADB_ALLOW_EMPTY_ROOT_PASSWORD: true
-      MARIADB_DATABASE: biere-n-collect
-    volumes:
-      - sql-data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "/usr/local/bin/healthcheck.sh", "--connect"]
-      retries: 10
-      interval: 5s
-    networks:
-      - biere-n-collect
   server:
     build:
       args:
-        VITE_BAR_NAME: ${VITE_BAR_NAME}
+        - VITE_BAR_NAME=${VITE_BAR_NAME}
+        - DATABASE_FILE=biere-n-collect.db
+        - DATABASE_URL=sqlite:biere-n-collect.db
       context: .
     volumes:
-      - ${PWD}/.env:/app/.env
+      - ./.env:/app/.env
+      - ./back/biere-n-collect.db:/app/biere-n-collect.db
     image: ${DOCKER_IMAGE_URL_BASE}biere-n-collect:latest
     ports:
       - 8000:8000
     environment:
-      - MARIADB_HOST=db
-    depends_on:
-      db:
-        condition: service_healthy
-    networks:
-      - biere-n-collect
+      - DATABASE_URL=sqlite:biere-n-collect.db
 
 volumes:
-  sql-data:
-
-networks:
-  biere-n-collect:
+  sqlite-data:
