--- a/back/Cargo.toml
+++ b/back/Cargo.toml
@@ -24,6 +24,8 @@ serde_json = "1.0"
 axum-extra = { version = "0.9.3", features = ["cookie"] }
 qrcode = { version = "0.14.1", features = ["svg", "image"], default-features = false }
 image = { version = "0.25.2", default-features = false, features = ["png", "rayon"] }
+tokio-stream = { version = "0.1.17", features = ["sync"] }
+futures-util = "0.3.31"
 
 [dev-dependencies]
 tower = { version = "0.5.1", features = ["util"] }
