prepare for ci e2e : feature for localhost smtpserver
+ fix timing e2e

--- a/.env.template
+++ b/.env.template
@@ -11,6 +11,7 @@ VITE_API_URL=https://biere-n-collect.eli-sauvage.eu/api
 
 SMTP_USERNAME=
 SMTP_PASSWORD=
+SMTP_SERVER="smtp.gmail.com"
 
 #dev vars
 DOCKER_IMAGE_URL_BASE=ghcr.io/eli-sauvage/
