--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
+  unit-tests:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -34,7 +34,87 @@ jobs:
 
       - name: build and test
         run: |
-          bash test.sh
+          docker compose -f compose.test.yml run --build test-back
+
+  e2e-tests:
+    runs-on: ubuntu-latest
+    # runs-on: self-hosted
+    steps:
+      - name: build and test
+        env:
+          STRIPE_PUBLISHABLE_KEY: ${{ secrets.STRIPE_PUBLISHABLE_KEY }}
+          STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+        run: |
+          echo $STRIPE_SECRET_KEY
+
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: copy env template
+        run: cp .env.template .env
+
+
+      - name: load dotenv file
+        uses: xom9ikk/dotenv@v2.3.0
+
+
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+
+      - name: install sqlx-cli
+        uses: taiki-e/install-action@v2
+        with:
+          tool: nextest,sqlx-cli
+
+
+      - name: log into github container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: setup docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: migrate db
+        run: |
+          cd back
+          touch $DATABASE_FILE
+          cargo sqlx migrate run
+          ls -l
+
+      - name: bake
+        uses: docker/bake-action@v6
+        with:
+          load: true
+          allow: fs.read=..
+          files: compose.e2e.yml
+          workdir: e2e
+          source: .
+          set: |
+            *.cache-to=type=gha,mode=max
+            *.cache-from=type=gha
+
+      - name: build and test
+        env:
+          STRIPE_PUBLISHABLE_KEY: ${{ secrets.STRIPE_PUBLISHABLE_KEY }}
+          STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+        run: |
+          docker compose -f e2e/compose.e2e.yml run e2e
+
+      - name: generate logs
+        if: failure()
+        run: |
+          docker compose -f e2e/compose.e2e.yml logs e2e > e2e/logs_e2e.txt
+          docker compose -f e2e/compose.e2e.yml logs test-back > e2e/logs_test-back.txt
+          docker compose -f e2e/compose.e2e.yml logs mailer > e2e/logs_mailer.txt
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          path: |
+            e2e/videos/**
+            e2e/screenshots/**
+            e2e/logs_*.txt
 
   build:
     runs-on: ubuntu-latest
@@ -75,7 +155,7 @@ jobs:
 
   push:
     runs-on: ubuntu-latest
-    needs: [build, test]
+    needs: [build, unit-tests, e2e-tests]
     permissions:
       contents: write
       packages: write
@@ -115,28 +195,3 @@ jobs:
       - name: push
         run: |
           docker compose push
-
-      # - name: copy env template
-      #   run: cp .env.template .env
-
-      # - name: load dotenv file
-      #   uses: xom9ikk/dotenv@v2.3.0
-
-      # - name: test back
-      #   run: |
-      #     bash test.sh
-      #     docker buildx build --push \
-      #       -t ghrc.io/eli-sauvage/biere-n-collect:lastest \
-      #       --cache-to type=gha,url
-      #       .
-      #     docker compose push
-
-      # - name: Build and push
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     push: true
-      #     tags: ghcr.io/eli-sauvage/biere-n-collect:latest
-      #     cache-from: type=gha
-      #     build-args: |
-      #       VITE_BAR_NAME=${{ env.VITE_BAR_NAME }}
-      #     cache-to: type=gha,mode=max
