--- a/e2e/compose.e2e.yml
+++ b/e2e/compose.e2e.yml
@@ -21,7 +21,7 @@ services:
     environment:
       - DATABASE_URL=sqlite:biere-n-collect.db
       - SMTP_USERNAME=infos@bnc
-      - SMTP_PASSWORD=azerty # server panics if not present
+      - SMTP_PASSWORD=azerty  # server panics if not present
       - SMTP_HOST=mailer
       - SMTP_PORT=25
       - STRIPE_PUBLISHABLE_KEY=$STRIPE_PUBLISHABLE_KEY
@@ -54,6 +54,30 @@ services:
         condition: service_started
       test-back:
         condition: service_healthy
+    networks:
+      - e2e
+
+  # RUN `xhost +` BEFORE !!
+  e2e-headed:
+    build:
+      context: ..
+      dockerfile: e2e/Dockerfile.cypress
+    volumes:
+      - ./screenshots:/app/cypress/screenshots
+      - ./videos:/app/cypress/videos
+      - /tmp/.X11-unix:/tmp/.X11-unix:ro
+      - ../front/cypress/e2e:/app/cypress/e2e
+    environment:
+      - CYPRESS_SERVER_URL=http://test-back:8000
+      - CYPRESS_MAIL_API_URL=http://mailer:80
+      - DISPLAY=$DISPLAY
+      # - DEBUG=cypress:*
+    depends_on:
+      mailer:
+        condition: service_started
+      test-back:
+        condition: service_healthy
+    command: npx cypress open
     networks:
       - e2e
 networks:
