continued classic_usecase test until waiter scan, TODO: split into multiple tests ?
Cypress.env("key", "val") to communicate between tests ?

--- a/front/package.json
+++ b/front/package.json
@@ -28,6 +28,8 @@
         "vue-router": "^4.4"
     },
     "devDependencies": {
+        "@zxing/browser": "^0.1.5",
+        "@zxing/library": "^0.21.3",
         "@rushstack/eslint-patch": "^1.8.0",
         "@stripe/stripe-js": "^4.2.0",
         "@tsconfig/node20": "^20.1.4",
