--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
           STRIPE_PUBLISHABLE_KEY: ${{ secrets.STRIPE_PUBLISHABLE_KEY }}
           STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
         run: |
-          docker compose -f e2e/compose.e2e.yml run e2e
+          docker compose -f e2e/compose.e2e.yml run --build e2e
 
       - name: generate logs
         if: failure()
